--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p></p>
         <p></p>
         <p></p>
-        <p></p>
-    </div> -->
+        <p></p> -->
+    </div>
 </body>
 </html>
