--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
+    <!-- minify -->
+    <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
     <title>Meago vs The World *le gasp*</title>
 </head>
 <body>
     <h1>Meago vs The World *le gasp*</h1>
+    <a href="Lista_Enemigos/index.html">
+        <p>para los enemigos</p>
+    </a>
     <div id="enemigos">
         <!-- <h1></h1>
         <img src="" alt="Long cat">
@@ -18,5 +23,21 @@
         <p></p>
         <p></p> -->
     </div>
+    <section class="icon-list">
+        <!-- controllers -->
+        <i class="nes-logo"></i>
+        <i class="nes-jp-logo"></i>
+        <i class="snes-logo"></i>
+        <i class="snes-jp-logo"></i>
+      
+        <!-- octocat -->
+        <i class="nes-octocat animate">
+            <a href="https://github.com/Luna-Hazuki2006/Programa.git"></a>
+        </i>
+      
+        <!-- phone -->
+        <i class="nes-smartphone"></i>
+        <i class="nes-phone"></i>
+      </section>
 </body>
 </html>
