--- a/Lista_Enemigos/index.html
+++ b/Lista_Enemigos/index.html
@@ -6,16 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
     <script src="../index.js" defer></script>
+    <!-- minify -->
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
     <title>Document</title>
 </head>
 <body>
-    <div id="enemigos">
-        <!-- <h1></h1>
-        <img src="" alt="Long cat">
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p> -->
+    <div class="nes-container with-title" id="enemigos">
+        <h3 class="title">Enemigos</h3>
     </div>
 </body>
 </html>
