--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
     <!-- minify -->
-    <link href="https://unpkg.com/nes.css@2.3.0/css/nes.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
     <title>Meago vs The World *le gasp*</title>
 </head>
 <body>
@@ -15,14 +16,6 @@
     <a href="Lista_Enemigos/index.html">
         <p>para los enemigos</p>
     </a>
-    <div id="enemigos">
-        <!-- <h1></h1>
-        <img src="" alt="Long cat">
-        <p></p>
-        <p></p>
-        <p></p>
-        <p></p> -->
-    </div>
     <section class="icon-list">
         <!-- controllers -->
         <i class="nes-logo"></i>
