--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             <img src="assets/Cheems_samurai_alive.png" alt="Cheems samurai :D">
             Cheems samurai :D
             ¿Qué acaso no está bonito?
+            Tu serás su Sensei >:D
+            Él a pasado toda su vida esperando su momento para entreanar y vencer al mal y a la ansiedad
         </p>
     </section>
     <a href="Lista_Enemigos/index.html">
