--- a/index.html
+++ b/index.html
@@ -21,8 +21,19 @@
             Cheems samurai :D
             ¿Qué acaso no está bonito?
             Tu serás su Sensei >:D
-            Él a pasado toda su vida esperando su momento para entreanar y vencer al mal y a la ansiedad
+            Él a pasado toda su vida esperando su momento para entreanar y vencer al mal y a la ansiedad. Y un día llegaste tú :D.
+            Un ser del mundo físico que quiere ayudar a este samurai digital.
         </p>
+        <p>
+            Algunas de las cosas que puedes hacer en este espacio virtual son:
+        </p>
+        <ul class="nes-list is-disc">
+            <li>Comprar cosas a Cheems en la tienda virtual para darle powerups :D.</li>
+            <li>Entrenar su ataque.</li>
+            <li>Entrenar su defensa.</li>
+            <li>Good night.</li>
+        </ul>
+          
     </section>
     <a href="Lista_Enemigos/index.html">
         <p>para los enemigos</p>
