--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <li>Comprar cosas a Cheems en la tienda virtual para darle powerups :D.</li>
             <li>Entrenar su ataque.</li>
             <li>Entrenar su defensa.</li>
-            <li>Good night.</li>
+            <li>Descansar (un samurai necesita sus 7 horas de sueño también :D) lo cual lo curará completamente.</li>
+            <li>Explorar :D</li>
         </ul>
           
     </section>
