ya con mejor vista

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="assets/Cheems_samurai_alive.png" alt="Cheems samurai :D">
             Cheems samurai :D
             ¿Qué acaso no está bonito?
-            Tu serás su Sensei >:D
+            Tú serás su Sensei >:D
             Él a pasado toda su vida esperando su momento para entreanar y vencer al mal y a la ansiedad. Y un día llegaste tú :D.
             Un ser del mundo físico que quiere ayudar a este samurai digital.
         </p>
@@ -29,18 +29,24 @@
         </p>
         <ul class="nes-list is-disc">
             <li>Comprar cosas a Cheems en la tienda virtual para darle powerups :D.</li>
-            <li>Entrenar su ataque.</li>
-            <li>Entrenar su defensa.</li>
+            <li>Entrenar su ataque, pelearás contra un muñeco para ganar puntos de ataque (y puede que te pegue devuelta).</li>
+            <li>Entrenar su defensa, n muñe.</li>
             <li>Descansar (un samurai necesita sus 7 horas de sueño también :D) lo cual lo curará completamente.</li>
-            <li>Explorar :D</li>
+            <li>Explorar (¿Encontrarás un enemigo?, ¿un objeto?, ¿monedas? solo la suerte lo dirá):D</li>
         </ul>
-          
+        <p>Pero, ¡asegúrate que Cheems samurai no muera! Nisiquiera las mascotas virtuales se salvan de la muerte D:</p>
+        <p>Asique cuando lo veas con poca vida, déjalo descansar un poco, o usa algún objeto mágico para sanarlo</p>
     </section>
+    <p>¿No sabes cuales son los enemigos que te puedes encontrar cuando explores?</p>
     <a href="Lista_Enemigos/index.html">
-        <p>para los enemigos</p>
+        <p>¡Revisa la lista!</p>
     </a>
     <section>
-        <a class="nes-btn" href="">Entrenamiento</a>
+        <a class="nes-btn" href="Entrenar_defensa/index.html">Entrenar defensa</a>
+        <a class="nes-btn" href="">Entrenar ataque</a>
+        <a class="nes-btn" href="">Ir a la tienda</a>
+        <a class="nes-btn" href="">Explorar :D</a>
+        <a class="nes-btn" href="">Dormir (a mimir)</a>
     </section>
     <footer>
         <section class="icon-list">
