--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
     <a href="Lista_Enemigos/index.html">
         <p>¡Revisa la lista!</p>
     </a>
-    <section>
+    <section class="nes-container with-title" style="">
+        <h3 class="title">Botones de menú</h3>
         <a class="nes-btn" href="Entrenar_defensa/index.html">Entrenar defensa</a>
         <a class="nes-btn" href="">Entrenar ataque</a>
         <a class="nes-btn" href="">Ir a la tienda</a>
