--- a/Entrenar_defensa/index.html
+++ b/Entrenar_defensa/index.html
@@ -11,7 +11,7 @@
     <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
     <title>Document</title>
 </head>
-<body>
+<body class="inicio">
     
 </body>
 </html>
