--- a/Lista_Enemigos/index.html
+++ b/Lista_Enemigos/index.html
@@ -11,7 +11,7 @@
     <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
     <title>Document</title>
 </head>
-<body>
+<body class="inicio">
     <div class="nes-container with-title" id="enemigos">
         <h3 class="title">Enemigos</h3>
     </div>
