--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         </ul>
         <p>Pero, ¡asegúrate que Cheems samurai no muera! Nisiquiera las mascotas virtuales se salvan de la muerte D:</p>
         <p>Asique cuando lo veas con poca vida, déjalo descansar un poco, o usa algún objeto mágico para sanarlo</p>
+        <p>¿No sabes cuales son los enemigos que te puedes encontrar cuando explores?</p>
+        <a href="Lista_Enemigos/index.html">
+            <p>¡Revisa la lista!</p>
+        </a>
     </section>
-    <p>¿No sabes cuales son los enemigos que te puedes encontrar cuando explores?</p>
-    <a href="Lista_Enemigos/index.html">
-        <p>¡Revisa la lista!</p>
-    </a>
-    <section class="nes-container with-title" style="">
+    <section class="nes-container with-title">
         <h3 class="title">Botones de menú</h3>
         <a class="nes-btn" href="Entrenar_defensa/index.html">Entrenar defensa</a>
         <a class="nes-btn" href="">Entrenar ataque</a>
@@ -56,7 +56,6 @@
             <i class="nes-jp-logo"></i>
             <i class="snes-logo"></i>
             <i class="snes-jp-logo"></i>
-          
             <!-- octocat -->
             <a href="https://github.com/Luna-Hazuki2006/Programa.git" target="_blank">
                 <i class="nes-octocat animate"></i>
