--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <a class="nes-btn" href="">Entrenar ataque</a>
         <a class="nes-btn" href="">Ir a la tienda</a>
         <a class="nes-btn" href="">Explorar :D</a>
-        <a class="nes-btn" href="">Dormir (a mimir)</a>
+        <a class="nes-btn" href="Dormir/index.html">Dormir (a mimir)</a>
     </section>
     <footer>
         <section class="icon-list">
