--- a/Entrenar_defensa/index.html
+++ b/Entrenar_defensa/index.html
@@ -9,7 +9,7 @@
     <!-- minify -->
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>Entrenar defensa</title>
 </head>
 <body class="inicio">
     
