--- a/Lista_Enemigos/index.html
+++ b/Lista_Enemigos/index.html
@@ -9,7 +9,7 @@
     <!-- minify -->
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>Lista de enemigos</title>
 </head>
 <body class="inicio">
     <div class="nes-container with-title" id="enemigos">
