--- a/Lista_Enemigos/index.html
+++ b/Lista_Enemigos/index.html
@@ -12,8 +12,23 @@
     <title>Lista de enemigos</title>
 </head>
 <body class="inicio">
-    <div class="nes-container with-title" id="enemigos">
-        <h3 class="title">Enemigos</h3>
-    </div>
+    <main>
+        <div class="nes-container with-title" id="enemigos">
+            <h3 class="title">Enemigos</h3>
+        </div>
+    </main>
+    <footer>
+        <section class="icon-list">
+            <!-- controllers -->
+            <i class="nes-logo"></i>
+            <i class="nes-jp-logo"></i>
+            <i class="snes-logo"></i>
+            <i class="snes-jp-logo"></i>
+            <!-- octocat -->
+            <a href="https://github.com/Luna-Hazuki2006/Programa.git" target="_blank">
+                <i class="nes-octocat animate"></i>
+            </a>
+          </section>
+    </footer>
 </body>
 </html>
