--- a/Lista_Enemigos/index.html
+++ b/Lista_Enemigos/index.html
@@ -12,6 +12,14 @@
     <title>Lista de enemigos</title>
 </head>
 <body class="inicio">
+    <header>
+        <p>Esta es lista de los enemigos actuales y tendrás que enfrentarte con cada uno de ellos (no a la vez, claro está :v)</p>
+        <p>¡Pero no dejes que te intimeden, sé que los podras vencer!</p>
+        <a class="nes-btn" href="../index.html">
+            <img class="iconito" src="../assets/volver.png" alt="(Vover, para estar seguro de los enemigos :D)">
+            <p>Volver a la página principal</p>
+        </a>
+    </header>
     <main>
         <div class="nes-container with-title" id="enemigos">
             <h3 class="title">Enemigos</h3>
