--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             Cheems samurai :D
             ¿Qué acaso no está bonito?
             Tú serás su Sensei >:D
-            Él a pasado toda su vida esperando su momento para entreanar y vencer al mal y a la ansiedad. Y un día llegaste tú :D.
+            Él a pasado toda su vida esperando su momento para entrenar y vencer al mal y a la ansiedad. Y un día llegaste tú :D.
             Un ser del mundo físico que quiere ayudar a este samurai digital.
         </p>
         <p>
@@ -30,7 +30,7 @@
         <ul class="nes-list is-disc">
             <li>Comprar cosas a Cheems en la tienda virtual para darle powerups :D.</li>
             <li>Entrenar su ataque, pelearás contra un muñeco para ganar puntos de ataque (y puede que te pegue devuelta).</li>
-            <li>Entrenar su defensa, n muñe.</li>
+            <li>Entrenar su defensa, con un muñeco.</li>
             <li>Descansar (un samurai necesita sus 7 horas de sueño también :D) lo cual lo curará completamente.</li>
             <li>Explorar (¿Encontrarás un enemigo?, ¿un objeto?, ¿monedas? solo la suerte lo dirá):D</li>
         </ul>
