--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h3 class="title">Botones de menú</h3>
         <a class="nes-btn" href="Entrenar_defensa/index.html">Entrenar defensa</a>
         <a class="nes-btn" href="">Entrenar ataque</a>
-        <a class="nes-btn" href="">Ir a la tienda</a>
+        <a class="nes-btn" href="Comprar/index.html">Ir a la tienda</a>
         <a class="nes-btn" href="">Explorar :D</a>
         <a class="nes-btn" href="Dormir/index.html">Dormir (a mimir)</a>
     </section>
