--- a/Comprar/index.html
+++ b/Comprar/index.html
@@ -22,7 +22,10 @@
     <main>
         <div class="nes-container with-title" id="objetos">
             <h3 class="title">Objetos</h3>
-            <p id="DogeCoins">Cheems samurai tiene: </p>
+            <p id="DogeCoins"></p>
+            <p id="Ataque"></p>
+            <p id="Defensa"></p>
+            <p id="Salud"></p><br>
         </div>
     </main>
     <footer>
