--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h3 class="title">Bienvenido</h3>
         <p>Hola usuario, bienvenido a Meago (pronúncialo en inglés >:v), aquí podras cuidar y entrenar a tu propia mascota virtual, el cual es... *redoble de tambor*</p>
         <p>
-            <img src="assets/Cheems_samurai_alive.png" alt="Cheems samurai :D">
+            <img id="cheems" src="assets/Cheems_samurai_alive.png" alt="Cheems samurai :D">
             Cheems samurai :D
             ¿Qué acaso no está bonito?
             Tú serás su Sensei >:D
@@ -40,6 +40,10 @@
         <a href="Lista_Enemigos/index.html">
             <p>¡Revisa la lista!</p>
         </a>
+    </section>
+    <section class="nes-container with-title">
+        <h3 class="title">Estádisticas</h3>
+
     </section>
     <section class="nes-container with-title">
         <h3 class="title">Botones de menú</h3>
