--- a/Comprar/index.html
+++ b/Comprar/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <script src="../index.js" defer></script>
+    <script src="index.js" defer></script>
     <!-- minify -->
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
@@ -22,6 +22,7 @@
     <main>
         <div class="nes-container with-title" id="objetos">
             <h3 class="title">Objetos</h3>
+            <p id="DogeCoins">Cheems samurai tiene: </p>
         </div>
     </main>
     <footer>
