--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
             <p>¡Revisa la lista!</p>
         </a>
     </section>
-    <section class="nes-container with-title">
+    <section id="stat" class="nes-container with-title">
         <h3 class="title">Estádisticas</h3>
-
     </section>
-    <section class="nes-container with-title">
+    <section id="visible" class="nes-container with-title">
         <h3 class="title">Botones de menú</h3>
         <a class="nes-btn" href="Entrenar_defensa/index.html">Entrenar defensa</a>
         <a class="nes-btn" href="">Entrenar ataque</a>
