--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </p>
         <ul class="nes-list is-disc">
             <li>Comprar cosas a Cheems en la tienda virtual para darle powerups :D.</li>
-            <li>Entrenar su ataque, pelearás contra un muñeco para ganar puntos de ataque (y puede que te pegue devuelta).</li>
-            <li>Entrenar su defensa, con un muñeco.</li>
+            <li>Entrenar su ataque, pelearás contra un boss para ganar puntos de ataque.</li>
+            <li>Entrenar su defensa, pelearás contra un boss para ganar puntos de defensa.</li>
             <li>Descansar (un samurai necesita sus 7 horas de sueño también :D) lo cual lo curará completamente.</li>
             <li>Explorar (¿Encontrarás un enemigo?, ¿un objeto?, ¿monedas? solo la suerte lo dirá):D</li>
         </ul>
