--- a/Dormir/index.html
+++ b/Dormir/index.html
@@ -11,7 +11,33 @@
     <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
     <title>Dormir</title>
 </head>
-<body>
-    
+<body class="inicio">
+    <header>
+        <p>Aquí es donde Cheems samurai duerme ¿qué acaso no es bonito?</p>
+        <p>¡Pero no dejes que las pesadillas te intimeden, sé que pronto tendrás sueños bonitos!</p>
+        <p>Y cuando despiertes, ¡estarás completamente sanado!</p>
+        <a class="nes-btn" href="../index.html">
+            <img class="iconito" src="../assets/volver.png" alt="(Vover, para buscar más dinero :D)">
+        </a>
+    </header>
+    <main>
+        <section class="nes-container with-title">
+            <h3 class="title">Aquí esta su casita :D</h3>
+            <img src="../assets/Cheems_samurai_mimiendo.jpg" alt="Ya esta mimiendo :D">
+        </section>
+    </main>
+    <footer>
+        <section class="icon-list">
+            <!-- controllers -->
+            <i class="nes-logo"></i>
+            <i class="nes-jp-logo"></i>
+            <i class="snes-logo"></i>
+            <i class="snes-jp-logo"></i>
+            <!-- octocat -->
+            <a href="https://github.com/Luna-Hazuki2006/Programa.git" target="_blank">
+                <i class="nes-octocat animate"></i>
+            </a>
+          </section>
+    </footer>
 </body>
 </html>
