--- a/Entrenar_ataque/index.html
+++ b/Entrenar_ataque/index.html
@@ -5,13 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <script src="../index.js" defer></script>
+    <script src="index.js" defer></script>
     <!-- minify -->
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Entrenar ataque</title>
 </head>
 <body class="inicio">
-    
+    <header>
+        <p>Aquí es donde Cheems samurai practica su ataque ¿qué acaso no es bonito?</p>
+        <p>¡Pero no dejes que el temor te intimede, sé que pronto serás muy fuerte!</p>
+        <p>Y algún día... ¡Serás un gran samurai!</p>
+        <a class="nes-btn" href="../index.html">
+            <img class="iconito" src="../assets/volver.png" alt="(Vover, para buscar más dinero :D)">
+        </a>
+    </header>
+    <main>
+        <section class="nes-container with-title" style="display: grid; grid-template-rows: 2fr;">
+            <h3 class="title">Listo para pelear :D</h3>
+            <img src="../assets/cheems_samurai_peleado.webp" alt="Ya esta mimiendo :D">
+            <button id="suerte" class="nes-btn">¡Ataca :D!</button>
+        </section>
+    </main>
+    <footer>
+        <section class="icon-list">
+            <!-- controllers -->
+            <i class="nes-logo"></i>
+            <i class="nes-jp-logo"></i>
+            <i class="snes-logo"></i>
+            <i class="snes-jp-logo"></i>
+            <!-- octocat -->
+            <a href="https://github.com/Luna-Hazuki2006/Programa.git" target="_blank">
+                <i class="nes-octocat animate"></i>
+            </a>
+          </section>
+    </footer>
 </body>
 </html>
