--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section id="visible" class="nes-container with-title">
         <h3 class="title">Botones de menú</h3>
         <a class="nes-btn" href="Entrenar_defensa/index.html">Entrenar defensa</a>
-        <a class="nes-btn" href="">Entrenar ataque</a>
+        <a class="nes-btn" href="Entrenar_ataque/index.html">Entrenar ataque</a>
         <a class="nes-btn" href="Comprar/index.html">Ir a la tienda</a>
         <a class="nes-btn" href="Explorar/index.html">Explorar :D</a>
         <a class="nes-btn" href="Dormir/index.html">Dormir (a mimir)</a>
