--- a/Entrenar_ataque/index.html
+++ b/Entrenar_ataque/index.html
@@ -22,6 +22,9 @@
         </a>
     </header>
     <main>
+        <section id="stat" class="nes-container with-title">
+            <h3 class="title">Estadísticas de Cheems samurai</h3>
+        </section><br>
         <section class="nes-container with-title" style="display: grid; grid-template-rows: 2fr;">
             <h3 class="title">Listo para pelear :D</h3>
             <img src="../assets/cheems_samurai_peleado.webp" alt="Ya esta mimiendo :D">
