--- a/index.html
+++ b/index.html
@@ -46,11 +46,21 @@
     </section>
     <section id="visible" class="nes-container with-title">
         <h3 class="title">Botones de menú</h3>
-        <a class="nes-btn" href="Entrenar_defensa/index.html">Entrenar defensa</a>
-        <a class="nes-btn" href="Entrenar_ataque/index.html">Entrenar ataque</a>
-        <a class="nes-btn" href="Comprar/index.html">Ir a la tienda</a>
-        <a class="nes-btn" href="Explorar/index.html">Explorar :D</a>
-        <a class="nes-btn" href="Dormir/index.html">Dormir (a mimir)</a>
+        <a href="Entrenar_defensa/index.html">
+            <button class="nes-btn">Entrenar defensa</button>
+        </a>
+        <a href="Entrenar_ataque/index.html">
+            <button class="nes-btn">Entrenar ataque</button>
+        </a>
+        <a href="Comprar/index.html">
+            <button class="nes-btn">Ir a la tienda</button>
+        </a>
+        <a href="Explorar/index.html">
+            <button class="nes-btn">Explorar :D</button>
+        </a>
+        <a href="Dormir/index.html">
+            <button class="nes-btn">Dormir (a mimir)</button>
+        </a>
     </section>
     <footer>
         <section class="icon-list">
