unas pocas mejoras

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
     <section id="visible" class="nes-container with-title">
         <h3 class="title">Botones de menú</h3>
         <a href="Entrenar_defensa/index.html">
-            <button class="nes-btn">Entrenar defensa</button>
+            <button class="nes-btn" onclick="contar()">Entrenar defensa</button>
         </a>
         <a href="Entrenar_ataque/index.html">
-            <button class="nes-btn">Entrenar ataque</button>
+            <button class="nes-btn" onclick="contar()">Entrenar ataque</button>
         </a>
         <a href="Comprar/index.html">
             <button class="nes-btn">Ir a la tienda</button>
         </a>
         <a href="Explorar/index.html">
-            <button class="nes-btn">Explorar :D</button>
+            <button class="nes-btn" onclick="contar()">Explorar :D</button>
         </a>
         <a href="Dormir/index.html">
-            <button class="nes-btn">Dormir (a mimir)</button>
+            <button class="nes-btn" onclick="contar()">Dormir (a mimir)</button>
         </a>
     </section>
     <footer>
