--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         </p>
         <ul class="nes-list is-disc">
             <li>Comprar cosas a Cheems en la tienda virtual para darle powerups :D.</li>
-            <li>Entrenar su ataque, pelearás contra un boss para ganar puntos de ataque.</li>
-            <li>Entrenar su defensa, pelearás contra un boss para ganar puntos de defensa.</li>
+            <li>Entrenar su ataque, pelearás para ganar puntos de ataque (pero perderás puntos de salud D:).</li>
+            <li>Entrenar su defensa, pelearás para ganar puntos de defensa (pero perderás puntos de salud D: 
+                (PERO, hay una pequeña posibilidad que ganes puntos de salud máxima :D)).</li>
             <li>Descansar (un samurai necesita sus 7 horas de sueño también :D) lo cual lo curará completamente.</li>
-            <li>Explorar (¿Encontrarás un enemigo?, ¿un objeto?, ¿monedas? solo la suerte lo dirá):D</li>
+            <li>Explorar (¿ganarás puntos?, ¿perderás puntos?, ¿un objeto?, ¿monedas? solo la suerte lo dirá):D</li>
         </ul>
         <p>Pero, ¡asegúrate que Cheems samurai no muera! Nisiquiera las mascotas virtuales se salvan de la muerte D:</p>
         <p>Asique cuando lo veas con poca vida, déjalo descansar un poco, o usa algún objeto mágico para sanarlo</p>
